--- a/src/engineCore/config.json
+++ b/src/engineCore/config.json
@@ -1,5 +1,7 @@
 {
-  "canvasWidth": 800,
+  "canvasWidth": 1400,
   "canvasHeight": 733,
-  "accGravity": 0.05
+  "accGravity": 0.05,
+  "bulletMass": 1,
+  "liquidCoefficient": 0.0000005
 }
