--- a/src/engineCore/config.json
+++ b/src/engineCore/config.json
@@ -3,6 +3,7 @@
   "canvasHeight": 633,
   "accGravity": 0.01,
   "bulletMass": 10,
+  "spaceshipMass": 10,
   "liquidCoefficient": 0.0008,
   "thrust": 4
 }
